[gd_scene load_steps=4 format=3 uid="uid://bobpwlt8y22be"]

[ext_resource type="Script" uid="uid://deuejfixtj4fu" path="res://Micromon/micromon_start.gd" id="1_3qtjr"]
[ext_resource type="PackedScene" uid="uid://cg7p0r0nrfqeb" path="res://Micromon/sprite_select.tscn" id="1_o4fm0"]
[ext_resource type="PackedScene" uid="uid://ccwr8m4wr2mn" path="res://pause_menu.tscn" id="3_d3fk6"]

[node name="micromon_start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3qtjr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.463665, 0.602815, 0.430346, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 112.0
offset_top = 57.0
offset_right = 200.0
offset_bottom = 78.0

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "1 Player"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "2 Players"

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 123.0
offset_top = 40.0
offset_right = 190.0
offset_bottom = 53.0
text = "Number of Player"

[node name="SpriteSelect" parent="." instance=ExtResource("1_o4fm0")]
visible = false
layout_mode = 1
offset_left = 63.0
offset_top = 87.0
offset_right = -208.0
offset_bottom = -51.0

[node name="SpriteSelect2" parent="." instance=ExtResource("1_o4fm0")]
visible = false
layout_mode = 1
offset_left = 193.0
offset_top = 87.0
offset_right = -78.0
offset_bottom = -51.0
player_number = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 16.0
offset_right = 289.0
offset_bottom = 29.0
text = "Catch your 3 favourite Microorganisms to win the upcoming battle!"

[node name="Buttonstart" type="Button" parent="."]
layout_mode = 0
offset_left = 137.0
offset_top = 144.0
offset_right = 167.0
offset_bottom = 165.0
text = "Start!"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 62.0
offset_right = 208.0
offset_bottom = 123.0
text = "WASD - to Move
SPACE - to catch Micromon
I - for inventory
F - to fight when READY!"

[node name="Pause_menu" parent="." instance=ExtResource("3_d3fk6")]
visible = false
layout_mode = 1

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Buttonstart" to="." method="_on_buttonstart_pressed"]
